# ChimeraScript

./: .gitignore  BackUpLoader.py  Back_up_Loader.py  Dockerfile  DriveDiffMerger.py  EmptyDirRemover.py  ExampleConfig.json  GIF_Converter.py  GarbageCleaner.py  GitPuller.py  PyHypervisor.py  README.md  Update.sh  YouTubeScraper.py  gitPuller.py  pyproject.toml  requirements.txt  utility.py
.github/workflows/: CI Testing.yaml  ci.yaml  formatting.yml  testing.yml
ChimeraScript/: Back_up_Loader.py  GIF_Converter.py
chimera_utils/: __init__.py  compressor.py  concurrency.py  drive_fs.py  log.py  spawner.py  utils_test.py
scripts/: BackUpLoader.py  CryptoTracker.py  DocReader.py  DriveDiffMerger.py  GitPuller.py  YouTubeScraper.py
tests/: test_backuploader.py  test_docreader.py  test_gitpuller.py  test_youtubescraper.py  unit_backuploader.py  unit_drivediffmerger.py  unit_youtubescraper.py
