[tool.poetry]
name = "ChimeraScript"
version = "0.1.0"
description = "A suit of Python scripts for my everyday usage"
authors = ["Enea Guidi <enea.guidi@botika.ai>"]
license = "GPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.1.0"
fire = "^0.4.0"
requests = "^2.27.1"
asyncssh = "^2.10.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
