[tool.poetry]
name = "ChimeraScript"
version = "0.1.0"
description = "A suit of Python scripts for my everyday usage"
authors = ["Enea Guidi <enea.guidi@botika.ai>"]
repository = "https://github.com/its-hmny/ChimeraScript"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.1.0"
fire = "^0.4.0"
requests = "^2.27.1"
asyncssh = "^2.10.0"
pytube = {git = "https://github.com/Haseeb1604/pytube"}
gTTS = "^2.2.4"
textract = "^1.6.5"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pylint = "^2.13.4"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
console_output_style = "progress"
python_files = ["unit_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

